fix: downgrade react-native-worklets to 0.5.1 for reanimated compatibility
Fixes WorkletsError mismatch between JS (0.7.3) and native (0.5.1) parts.
Jest testing still works with the downgraded version.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "strict": true,
     "target": "ESNext",
-    "lib": ["ESNext"],
+    "lib": [
+      "ESNext"
+    ],
     "jsx": "react-jsx",
     "module": "commonjs",
     "moduleResolution": "node",
@@ -11,5 +13,8 @@
     "skipLibCheck": true,
     "resolveJsonModule": true
   },
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ],
+  "extends": "expo/tsconfig.base"
 }
